--- a/app/src/main/res/layout/fragment_bottom_vocas.xml
+++ b/app/src/main/res/layout/fragment_bottom_vocas.xml
@@ -38,6 +38,6 @@
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recyclerViewTable"
     android:layout_width="match_parent"
-    android:layout_height="682dp" />
+    android:layout_height="wrap_content" />
 
 </LinearLayout>
