--- a/app/src/main/res/layout/table_item.xml
+++ b/app/src/main/res/layout/table_item.xml
@@ -10,7 +10,6 @@
     android:id="@+id/bookItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp"
     app:cardCornerRadius="15sp"
     app:cardElevation="3sp"
     app:cardUseCompatPadding="true">
@@ -18,7 +17,7 @@
     <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:background="?android:attr/colorBackgroundCacheHint"
+      android:background="@color/white"
       android:orientation="horizontal">
 
       <ImageView
@@ -39,7 +38,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="list(table) name"
-          android:textColor="?attr/actionMenuTextColor"
+          android:textColor="@color/black"
           android:textSize="20sp" />
 
         <TextView
@@ -47,7 +46,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="number of raw(word)"
-          android:textColor="?attr/actionMenuTextColor"
+          android:textColor="@color/black"
           android:textSize="16sp" />
       </LinearLayout>
 
