단어word-item 리사이클러뷰 만들었다.

--- a/app/src/main/res/layout/dialog_make_table.xml
+++ b/app/src/main/res/layout/dialog_make_table.xml
@@ -19,5 +19,6 @@
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
     android:singleLine="true"
-    android:textSize="24sp" />
+    android:textSize="24sp"
+    android:maxLength="12"/>
 </LinearLayout>
