--- a/app/src/main/res/layout/fragment_bottom_vocas.xml
+++ b/app/src/main/res/layout/fragment_bottom_vocas.xml
@@ -22,16 +22,11 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="테스트용 임시버튼"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.808"
       app:layout_constraintStart_toStartOf="parent"
-      tools:layout_editor_absoluteY="0dp" />
-
-    <Button
-      android:id="@+id/btnVocasEdit"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Edit"
-      app:layout_constraintEnd_toEndOf="parent" />
+      app:layout_constraintTop_toTopOf="parent" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
