--- a/app/src/main/res/layout/table_item.xml
+++ b/app/src/main/res/layout/table_item.xml
@@ -7,7 +7,7 @@
 
   <!-- 아래 아이디값에 주의 -->
   <androidx.cardview.widget.CardView
-    android:id="@+id/bookItem"
+    android:id="@+id/tableItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="15sp"
@@ -15,6 +15,7 @@
     app:cardUseCompatPadding="true">
 
     <LinearLayout
+      android:id="@+id/linearLayoutTable"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/white"
@@ -23,13 +24,17 @@
       <ImageView
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
         android:layout_weight="2"
-        app:srcCompat="@android:drawable/ic_media_play" />
+        app:srcCompat="@drawable/folder_image" />
 
       <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="7dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginBottom="7dp"
         android:layout_weight="8"
         android:orientation="vertical">
 
@@ -48,7 +53,17 @@
           android:text="number of raw(word)"
           android:textColor="@color/black"
           android:textSize="16sp" />
+
       </LinearLayout>
+
+      <ImageView
+        android:id="@+id/imageViewEditTable"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginRight="6dp"
+        android:layout_weight="1"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_baseline_mode_edit_24" />
 
     </LinearLayout>
   </androidx.cardview.widget.CardView>
