--- a/app/src/main/res/layout/activity_query_table.xml
+++ b/app/src/main/res/layout/activity_query_table.xml
@@ -19,15 +19,7 @@
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <Button
-      android:id="@+id/button2"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:text="Button" />
-  </LinearLayout>
+    android:orientation="horizontal"/>
 
   <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recyclerViewWords0"
