--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:id="@+id/linearLayoutWord"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical">
 
   <LinearLayout
-    android:id="@+id/linearLayoutWord"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="9dp"
@@ -42,16 +42,23 @@
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:layout_margin="5dp"
+      android:layout_marginLeft="5dp"
+      android:layout_marginTop="5dp"
+      android:layout_marginRight="0dp"
+      android:layout_marginBottom="5dp"
       android:layout_weight="20"
       android:text="meaning"
       android:textSize="16sp" />
 
     <ImageView
+      android:id="@+id/imageViewDeleteWord"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
-      android:layout_weight="1"
-      app:srcCompat="@android:drawable/btn_default_small" />
+      android:layout_marginRight="2dp"
+      android:layout_weight="3"
+      android:visibility="invisible"
+      app:srcCompat="@android:drawable/ic_delete" />
   </LinearLayout>
 
   <View
