--- a/app/src/main/res/layout/activity_add_word.xml
+++ b/app/src/main/res/layout/activity_add_word.xml
@@ -7,7 +7,7 @@
   tools:context=".AddWord">
 
   <androidx.appcompat.widget.Toolbar
-    android:id="@+id/toolbarAddWord"
+    android:id="@+id/toolbarModifyTable"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/colorPrimary"
