랜덤공부화면에 말풍선 추가함. 나이트모드도 제대로 추가.

--- a/app/src/main/res/layout/fragment_random_word_view.xml
+++ b/app/src/main/res/layout/fragment_random_word_view.xml
@@ -1,40 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:background="#1A237E">
+  android:layout_height="match_parent">
 
 
-
-  <androidx.constraintlayout.widget.ConstraintLayout
+  <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
-    android:background="#2196F3">
+    android:orientation="vertical">
 
-    <TextView
-      android:id="@+id/textViewRandomWord"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="168dp"
-      android:text="WORD"
-      android:textSize="24sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1">
 
-    <TextView
-      android:id="@+id/textViewRandomMeaning"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="88dp"
-      android:text="MEANING"
-      android:textSize="24sp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.504"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/textViewRandomWord" />
-  </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+      <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/d2_left" />
+
+      <TextView
+        android:id="@+id/textViewRandomWord"
+        android:layout_width="310dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="60dp"
+        android:gravity="center_vertical"
+        android:text="WORD WORD WORD WORD WORD WORD WORD WORD WORD WORD"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_weight="1">
+
+      <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/d2_right" />
+
+      <TextView
+        android:id="@+id/textViewRandomMeaning"
+        android:layout_width="310dp"
+        android:layout_height="150dp"
+        android:layout_marginBottom="60dp"
+        android:gravity="center_vertical"
+        android:text="MEAN MEAN MEAN MEAN MEAN MEAN MEAN MEAN MEAN MEAN "
+        android:textAlignment="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+  </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
