--- a/app/src/main/res/layout/fragment_bottom_vocas.xml
+++ b/app/src/main/res/layout/fragment_bottom_vocas.xml
@@ -7,32 +7,34 @@
   android:orientation="vertical"
   tools:context=".BottomFragmentVocas">
 
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/recyclerViewTable"
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="15" />
+
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <View
+      android:id="@+id/divider"
+      android:layout_width="match_parent"
+      android:layout_height="1dp"
+      android:background="?android:attr/listDivider"
+      app:layout_constraintTop_toTopOf="parent" />
 
     <Button
       android:id="@+id/btnVocasMakeTable"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Make List" />
-
-    <Button
-      android:id="@+id/btnTest"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="테스트용 임시버튼"
+      android:text="Make List"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.808"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="1.0" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
-
-  <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recyclerViewTable"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
 
 </LinearLayout>
