--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,10 +26,9 @@
   <com.google.android.material.bottomnavigation.BottomNavigationView
     android:id="@+id/bottomNavigation"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    app:itemBackground="?colorPrimary"
+    android:layout_height="wrap_content"
 
+    android:background="#2196F3"
     app:itemIconTint="@color/white"
     app:itemTextColor="@color/white"
     app:menu="@menu/menu_bottom" />
