--- a/app/src/main/res/layout/fragment_random_word_view.xml
+++ b/app/src/main/res/layout/fragment_random_word_view.xml
@@ -25,17 +25,24 @@
 
       <TextView
         android:id="@+id/textViewRandomWord"
-        android:layout_width="310dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="40dp"
         android:gravity="center_vertical"
+        android:paddingLeft="36dp"
+        android:paddingTop="10dp"
+        android:paddingRight="36dp"
+        android:paddingBottom="30dp"
         android:text="WORD WORD WORD WORD WORD WORD WORD WORD WORD WORD"
         android:textAlignment="center"
+        android:textColor="?attr/actionMenuTextColor"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.477" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -53,12 +60,17 @@
 
       <TextView
         android:id="@+id/textViewRandomMeaning"
-        android:layout_width="310dp"
-        android:layout_height="150dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="40dp"
         android:gravity="center_vertical"
+        android:paddingLeft="36dp"
+        android:paddingTop="10dp"
+        android:paddingRight="36dp"
+        android:paddingBottom="30dp"
         android:text="MEAN MEAN MEAN MEAN MEAN MEAN MEAN MEAN MEAN MEAN "
         android:textAlignment="center"
+        android:textColor="?attr/actionMenuTextColor"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
