--- a/app/src/main/res/layout/table_item.xml
+++ b/app/src/main/res/layout/table_item.xml
@@ -10,6 +10,7 @@
     android:id="@+id/tableItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     app:cardCornerRadius="15sp"
     app:cardElevation="3sp"
     app:cardUseCompatPadding="true">
@@ -43,7 +44,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="list(table) name"
-          android:textColor="@color/black"
+          android:textColor="#000000"
           android:textSize="20sp" />
 
         <TextView
@@ -51,7 +52,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="number of raw(word)"
-          android:textColor="@color/black"
+          android:textColor="#000000"
           android:textSize="16sp" />
 
       </LinearLayout>
