--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -34,6 +34,7 @@
       android:layout_margin="5dp"
       android:layout_weight="20"
       android:text="word"
+      android:textColor="?attr/actionMenuTextColor"
       android:textSize="16sp" />
 
     <TextView
@@ -48,6 +49,7 @@
       android:layout_marginBottom="5dp"
       android:layout_weight="20"
       android:text="meaning"
+      android:textColor="?attr/actionMenuTextColor"
       android:textSize="16sp" />
 
     <ImageView
