--- a/app/src/main/res/layout/activity_modify_word.xml
+++ b/app/src/main/res/layout/activity_modify_word.xml
@@ -20,7 +20,6 @@
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3BBFBFBF"
     android:orientation="vertical">
 
     <FrameLayout
@@ -47,7 +46,7 @@
           android:layout_marginLeft="10dp"
           android:layout_marginTop="30dp"
           android:layout_marginRight="10dp"
-          android:hint="Word"
+          android:hint="@string/Word"
           android:maxLength="70"
           android:singleLine="true"
           android:textSize="16sp" />
@@ -59,7 +58,7 @@
           android:layout_marginLeft="10dp"
           android:layout_marginTop="20dp"
           android:layout_marginRight="10dp"
-          android:hint="Meaning"
+          android:hint="@string/Meaning"
           android:maxLength="70"
           android:singleLine="true"
           android:textSize="16sp" />
@@ -78,7 +77,7 @@
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:backgroundTint="#C86C6C6C"
-            android:text="CANCEL" />
+            android:text="@string/Cancel" />
 
           <Button
             android:id="@+id/btnModifyWord"
@@ -88,7 +87,7 @@
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:backgroundTint="#FF8F00"
-            android:text="Modify" />
+            android:text="@string/Modify" />
         </LinearLayout>
       </LinearLayout>
     </FrameLayout>
