--- a/app/src/main/res/layout/dialog_make_table.xml
+++ b/app/src/main/res/layout/dialog_make_table.xml
@@ -10,7 +10,7 @@
     android:layout_marginLeft="20dp"
     android:layout_marginTop="20dp"
     android:layout_marginRight="20dp"
-    android:text="List name"
+    android:text="@string/ListName"
     android:textSize="16sp" />
 
   <EditText
