--- a/app/src/main/res/layout/fragment_bottom_vocas.xml
+++ b/app/src/main/res/layout/fragment_bottom_vocas.xml
@@ -28,12 +28,13 @@
       android:id="@+id/btnVocasMakeTable"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Make List"
+      android:text="@string/makeAList"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="1.0" />
+      app:layout_constraintVertical_bias="0.0" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
