small changes and bug fixed

--- a/app/src/main/res/layout/activity_query_table.xml
+++ b/app/src/main/res/layout/activity_query_table.xml
@@ -44,6 +44,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_weight="1"
+        android:backgroundTint="#27A62C"
         android:text="@string/ADD" />
 
       <Button
